--- a/spring-ex-dependencies/pom.xml
+++ b/spring-ex-dependencies/pom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.guanmengyuan</groupId>
     <artifactId>spring-ex-dependencies</artifactId>
-    <version>1.0.2-jdk17on</version>
+    <version>1.0.3-jdk17on</version>
     <packaging>pom</packaging>
     <name>spring-ex-dependencies</name>
     <description>spring ex base pom</description>
@@ -32,19 +32,19 @@
     </scm>
 
     <properties>
-        <revision>1.0.2-jdk17on</revision>
+        <revision>1.0.3-jdk17on</revision>
         <java.version>17</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!--        spring start-->
-        <spring-boot.version>3.1.1</spring-boot.version>
+        <spring-boot.version>3.1.2</spring-boot.version>
         <spring-cloud.version>2022.0.3</spring-cloud.version>
-        <spring-cloud-tencent.version>1.11.7-2022.0.1</spring-cloud-tencent.version>
+        <spring-cloud-tencent.version>1.11.8-2022.0.1</spring-cloud-tencent.version>
         <spring-cloud-alibaba.version>2022.0.0.0-RC2</spring-cloud-alibaba.version>
         <!--        spring end-->
 
-        <mybatis-flex.version>1.5.1</mybatis-flex.version>
+        <mybatis-flex.version>1.5.2</mybatis-flex.version>
         <mybatis.version>3.0.2</mybatis.version>
         <hutool.version>6.0.0-M4</hutool.version>
         <knife4j.version>4.1.0</knife4j.version>
@@ -338,5 +338,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
