--- a/example/spring-cloud-example/gateway/src/main/resources/application.yml
+++ b/example/spring-cloud-example/gateway/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 9911
+  port: ${SERVER_PORT:80}
 spring:
   application:
     name: gateway
@@ -7,6 +7,8 @@ spring:
     sentinel:
       filter:
         enabled: false
+      transport:
+        dashboard: ${SENTINEL_HOST:localhost}:${SENTINEL_POST:8081}
     gateway:
       routes:
         - id: 用户
@@ -16,7 +18,7 @@ spring:
           filters:
             - StripPrefix=1
     nacos:
-      server-addr: 127.0.0.1:8848
+      server-addr: ${NACOS_HOST:localhost}:${NACOS_PORT:8848}
 knife4j:
   gateway:
     enabled: true
@@ -26,3 +28,8 @@ knife4j:
       version: openapi3
       excluded-services:
         - gateway
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
