--- a/example/spring-cloud-example/provider/pom.xml
+++ b/example/spring-cloud-example/provider/pom.xml
@@ -21,5 +21,15 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.guanmengyuan.spring-ex</groupId>
+            <artifactId>spring-boot-starter-mybatis-flex</artifactId>
+        </dependency>
 
+    </dependencies>
 </project>
