--- a/example/spring-cloud-example/provider/provider-user/pom.xml
+++ b/example/spring-cloud-example/provider/provider-user/pom.xml
@@ -36,6 +36,11 @@
                     <mainClass>com.guanmengyuan.spring.cloud.example.provider.UserProviderApplication</mainClass>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>io.fabric8</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+            </plugin>
+
         </plugins>
     </build>
 </project>
