--- a/example/spring-cloud-example/consumer/consumer-user/src/main/resources/application.yml
+++ b/example/spring-cloud-example/consumer/consumer-user/src/main/resources/application.yml
@@ -14,6 +14,8 @@ spring:
         enabled: false
       transport:
         dashboard: ${SENTINEL_HOST:localhost}:${SENTINEL_POST:8081}
+        client-ip: ${SENTINEL_HOST:localhost}
+        port: 8720
     nacos:
       server-addr: ${NACOS_HOST:localhost}:${NACOS_PORT:8848}
 dubbo:
@@ -32,7 +34,7 @@ dubbo:
     check: false
 
 server:
-  port: ${SERVER_PORT:80}
+  port: ${SERVER_PORT:81}
 springdoc:
   title: 测试接口文档
   group-configs:
