--- a/example/spring-cloud-example/pom.xml
+++ b/example/spring-cloud-example/pom.xml
@@ -56,8 +56,28 @@
                         </execution>
                     </executions>
                 </plugin>
-
+                <plugin>
+                    <groupId>io.fabric8</groupId>
+                    <artifactId>docker-maven-plugin</artifactId>
+                    <version>0.43.2</version>
+                    <executions>
+                        <execution>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>build</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <images>
+                            <image>
+                                <name>${project.name}</name>
+                            </image>
+                        </images>
+                    </configuration>
+                </plugin>
             </plugins>
+
         </pluginManagement>
     </build>
 </project>
