--- a/example/spring-cloud-example/gateway/src/main/resources/application.yml
+++ b/example/spring-cloud-example/gateway/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
         port: 8719
     gateway:
       routes:
-        - id: 用户
+        - id: user-consumer
           uri: lb://user-consumer
           predicates:
             - Path=/user/**
