--- a/spring-boot-starter-jy-client/pom.xml
+++ b/spring-boot-starter-jy-client/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.guanmengyuan</groupId>
         <artifactId>spring-ex</artifactId>
-        <version>1.0.15-jdk17on</version>
+        <version>1.0.16-jdk17on</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <groupId>com.guanmengyuan.spring-ex</groupId>
@@ -31,7 +31,7 @@
             <artifactId>retrofit-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.dromara.hutool</groupId>
+            <groupId>cn.hutool</groupId>
             <artifactId>hutool-json</artifactId>
         </dependency>
         <dependency>
@@ -43,7 +43,7 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.dromara.hutool</groupId>
+            <groupId>cn.hutool</groupId>
             <artifactId>hutool-extra</artifactId>
         </dependency>
 
