--- a/spring-cloud-starter-auth/pom.xml
+++ b/spring-cloud-starter-auth/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.guanmengyuan</groupId>
         <artifactId>spring-ex</artifactId>
-        <version>1.0.16-jdk17on</version>
+        <version>1.0.18-jdk17on</version>
     </parent>
 
     <groupId>com.guanmengyuan.spring-ex</groupId>
@@ -38,6 +38,15 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-cache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-captcha</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.guanmengyuan.spring-ex</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
