--- a/spring-ex-dependencies/pom.xml
+++ b/spring-ex-dependencies/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.guanmengyuan</groupId>
     <artifactId>spring-ex-dependencies</artifactId>
-    <version>1.0.16-jdk17on</version>
+    <version>1.0.18-jdk17on</version>
     <packaging>pom</packaging>
     <name>spring-ex-dependencies</name>
     <description>spring ex base pom</description>
@@ -32,30 +32,30 @@
     </scm>
 
     <properties>
-        <revision>1.0.16-jdk17on</revision>
+        <revision>1.0.18-jdk17on</revision>
         <java.version>17</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!--        spring start-->
-        <spring-boot.version>3.1.2</spring-boot.version>
+        <spring-boot.version>3.1.3</spring-boot.version>
         <spring-cloud.version>2022.0.4</spring-cloud.version>
-        <spring-cloud-tencent.version>1.11.8-2022.0.1</spring-cloud-tencent.version>
+        <spring-cloud-tencent.version>1.11.9-2022.0.1</spring-cloud-tencent.version>
         <spring-cloud-alibaba.version>2022.0.0.0</spring-cloud-alibaba.version>
         <!--        spring end-->
 
-        <mybatis-flex.version>1.5.8</mybatis-flex.version>
+        <mybatis-flex.version>1.6.4</mybatis-flex.version>
         <mybatis.version>3.0.2</mybatis.version>
         <hutool.version>5.8.21</hutool.version>
         <knife4j.version>4.3.0</knife4j.version>
         <therapi.version>0.15.0</therapi.version>
-        <retrofit.version>3.0.2</retrofit.version>
         <alipay.version>2.2.3</alipay.version>
-        <wx-java.version>4.5.4.B</wx-java.version>
+        <wx-java.version>4.5.5.B</wx-java.version>
         <snakeyaml.version>2.0</snakeyaml.version>
         <dubbo.version>3.2.5</dubbo.version>
         <sentinel.version>1.8.6</sentinel.version>
         <sa-token.version>1.35.0.RC</sa-token.version>
+        <forset.version>1.5.32</forset.version>
         <!--        build start-->
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
         <maven-gpg-plugin.version>3.1.0</maven-gpg-plugin.version>
@@ -218,11 +218,10 @@
                 <artifactId>therapi-runtime-javadoc-scribe</artifactId>
                 <version>${therapi.version}</version>
             </dependency>
-            <!--            retrofit-->
             <dependency>
-                <groupId>com.github.lianjiatech</groupId>
-                <artifactId>retrofit-spring-boot-starter</artifactId>
-                <version>${retrofit.version}</version>
+                <groupId>com.dtflys.forest</groupId>
+                <artifactId>forest-spring-boot3-starter</artifactId>
+                <version>${forset.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.yaml</groupId>
@@ -248,11 +247,6 @@
             <dependency>
                 <groupId>com.guanmengyuan.spring-ex</groupId>
                 <artifactId>spring-boot-starter-mybatis-flex</artifactId>
-                <version>${revision}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.guanmengyuan.spring-ex</groupId>
-                <artifactId>spring-boot-starter-jy-client</artifactId>
                 <version>${revision}</version>
             </dependency>
             <dependency>
