--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.guanmengyuan</groupId>
     <artifactId>spring-ex</artifactId>
-    <version>1.0.18-jdk17on</version>
+    <version>1.1.0</version>
     <packaging>pom</packaging>
 
     <name>spring-ex</name>
@@ -42,11 +42,12 @@
         <module>spring-boot-starter-wx-pay</module>
         <module>spring-boot-starter-alipay</module>
         <module>spring-cloud-starter-auth</module>
+        <module>spring-boot-starter-oss</module>
     </modules>
 
 
     <properties>
-        <revision>1.0.18-jdk17on</revision>
+        <revision>1.1.0</revision>
         <java.version>17</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
